# mirai

./: BEDROCK_ONLY.md  Cargo.toml  INTEGRATION_VALIDATION_SUMMARY.md  README.md  unified_config_example.toml
.github/workflows/: merged_system_ci.yml  performance_benchmarks.yml
crates/codegen/: Cargo.toml  build.rs
crates/codegen/src/: error.rs  generator.rs  json.rs  lib.rs  mirai_integration.rs  nbt.rs  parser.rs  protocol.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: config.rs  config_migration.rs  instance.rs  lib.rs  unified_config.rs  unified_features.rs
crates/core/src/ecs/: adapters.rs  bridge.rs  component.rs  entity.rs  event.rs  migration.rs  mod.rs  query.rs  resource.rs  system.rs  world.rs
crates/core/src/net/: client.rs  login.rs
crates/core/src/performance/: memory.rs  mod.rs  monitoring.rs  tests.rs  threading.rs
crates/core/src/plugin/: app.rs  bridge.rs  lifecycle.rs  mod.rs  plugin.rs  registry.rs
crates/level/: Cargo.toml  LEVELDB_COMPATIBILITY.md
crates/level/leveldb/: leveldb.cpp
crates/level/src/: biome.rs  ecs_integration.rs  key.rs  leveldb_compatibility.rs  leveldb_compatibility_basic_test.rs  leveldb_compatibility_test.rs  lib.rs  migration.rs  provider.rs  streaming.rs  subchunk.rs  world.rs
crates/level/test/db/: MANIFEST-000140
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs  redstone.rs  vanilla_mobs.rs
crates/proto/: Cargo.toml
crates/proto/src/: codec.rs  connection.rs  connection_state.rs  enhanced_connection.rs  lib.rs  raknet_bridge.rs  raknet_connection_manager.rs  unified.rs  unified_auth.rs
crates/proto/src/bedrock/: skin.rs
crates/proto/src/bedrock/login/: server_to_client_handshake.rs
crates/proto/src/crypto/: encrypt.rs  login.rs  mod.rs
crates/proto/src/types/: dimension.rs
crates/proto/tests/: raknet_integration_test.rs  unified_auth_integration_test.rs
crates/util/: Cargo.toml
crates/util/src/memory/: cow.rs
docs/: DEPLOYMENT_GUIDE.md  EXAMPLE_CONFIGURATIONS.md  MIGRATION_GUIDE.md  PERFORMANCE_TUNING_GUIDE.md  PLUGIN_DEVELOPMENT.md  TROUBLESHOOTING_GUIDE.md
resources/level/db/: MANIFEST-001948
scripts/: compare_benchmarks.py  generate_benchmark_charts.py  generate_nightly_report.py  load_test.py
test_configs/: compatibility_1.20.1.toml  load_test.toml  memory_test.toml
tests/: final_system_integration.rs  integration_test_runner.rs  integration_tests.rs  migration_validation.rs  performance_benchmarks.rs
tests/benchmarks/: baseline_comparison.rs  ecs_overhead.rs  memory_benchmarks.rs  mod.rs  plugin_performance.rs  regression_detection.rs  runner.rs
tests/integration/: codegen_build_integration.rs  compatibility_validation.rs  ecs_plugin_integration.rs  mod.rs  performance_integration.rs  protocol_network_integration.rs  system_integration_validation.rs
