[package]
name = "mirai-codegen"
version = "0.1.0"
edition = "2021"
description = "Build-time code generation for Mirai Minecraft server components"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

# Code generation dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# File parsing and data formats
rmp-serde = "0.15"

# Additional codegen-specific dependencies
walkdir = "2.3"
regex = "1.0"
indexmap = "2.0"
byteorder = "1.4"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
# Build script dependencies for code generation
walkdir = "2.3"
serde_json = "1.0"