[package]
name = "mirai"
version = "0.1.0"
description = "Lightweight, dedicated server software for Minecraft: Bedrock Edition"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/teampathfinders/mirai"
license = "Apache-2.0"
rust-version = "1.75.0"
build = "build.rs"

[lib]
name = "mirai"
path = "src/lib.rs"

[features]
tokio-console = ["console-subscriber"]

[build-dependencies]
# The vergen crate is used in build.rs to emit build-time metadata. The
# previously requested features ("git", "gitcl") are not available on the
# published crate version referenced here which caused cargo to fail during
# dependency resolution. Use the crate without requesting unavailable features
# so the dependency can be resolved. If specific vergen feature flags are
# required later, adjust this to match the crate's available features.
vergen = "9.0.6"

[dependencies]
nbt = { package = "mirai-nbt", path = "../nbt" }
util = { package = "mirai-util", path = "../util" }
level = { package = "mirai-level", path = "../level" }
proto = { package = "mirai-proto", path = "../proto" }
raknet = { package = "mirai-raknet", path = "../raknet" }
macros = { package = "mirai-macros", path = "../macros" }
codegen = { package = "mirai-codegen", path = "../codegen" }

console-subscriber = { version = "0.5.0", optional = true, features = ["parking_lot"] }

tracing = { version = "0.1.38", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["ansi", "fmt", "json", "smallvec", "parking_lot", "env-filter"], default-features = false }

tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "macros", "time", "tracing", "sync", "signal"] }
tokio-util = "0.7.16"
rand = "0.8.5"
dashmap = "6.1.0"
parking_lot = "0.12.5"
flate2 = "1.1.4"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
toml = "0.9.8"
thiserror = "2.0.17"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
semver = { version = "1.0", features = ["serde"] }
nohash-hasher = "0.2.0"
paste = "1.0.15"
rayon = "1.11.0"
futures = { version = "0.3.31", default-features = false }

# Performance system dependencies
crossbeam = "0.8.4"
prometheus-client = "0.24.0"
num_cpus = "1.16.0"
bytes = "1.8.0"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5.1"